plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'com.github.node-gradle.node' version '3.5.1'
    id 'org.liquibase.gradle' version '2.2.0'
}

group = 'com.qw'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    mapstructVersion = "1.5.3.Final"
    lombokVersion = "1.18.30"
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    implementation 'org.liquibase:liquibase-core'
    implementation 'org.apache.poi:poi:5.2.3'
    implementation 'org.apache.poi:poi-ooxml:5.2.3'
    implementation 'org.apache.commons:commons-csv:1.9.0'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
    implementation 'com.github.ben-manes.caffeine:caffeine'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'org.apache.pdfbox:pdfbox:2.0.27'


    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    compileOnly "org.projectlombok:lombok:${lombokVersion}"

    runtimeOnly 'org.postgresql:postgresql'
    liquibaseRuntime 'org.liquibase:liquibase-core'
    liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:2.1.1'
    liquibaseRuntime 'org.postgresql:postgresql'

    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"


    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testImplementation 'com.h2database:h2'
}

test{
    useJUnitPlatform()
}

liquibase {
    activities {
        main {
            changeLogFile 'src/main/resources/db/changelog/db.changelog-master.yaml'
            url 'jdbc:postgresql://localhost:5432/qw-homes'
            username 'postgres'
            password '1234'
        }
    }
}

tasks.register('qw-diffChangelog') {
    doLast {
        def changelogFile = "src/main/resources/db/changelog/changes/${new Date().format('yyyyMMddHHmmss')}-changelog.yaml"
        println "Enter a brief description for the changelog:"
        def description = System.console().readLine()

        liquibase {
            activities {
                main {
                    changeLogFile changelogFile
                    diffTypes 'tables,views,columns,indexes,foreignkeys,primarykeys,uniqueconstraints'
                }
            }
            runList = 'diffChangeLog'
        }

        file(changelogFile).text = "databaseChangeLog:\n  - changeSet:\n      id: ${new Date().format('yyyyMMddHHmmss')}\n      author: liquibase\n      comment: ${description}\n      changes:\n" + file(changelogFile).text
    }
}

// Node Changes
/*
node {
    version = '20.17.0'
    download = true
    nodeProjectDir = file("${project.projectDir}/frontend")
}

def reactAppDir = "$projectDir/frontend"

tasks.register('installReactDeps', NodeTask) {
    script = file("${reactAppDir}/package.json")
    args = ['install']
}

tasks.register('buildReactApp', NodeTask) {
    dependsOn installReactDeps
    script = file("${reactAppDir}/package.json")
    args = ['run', 'build']
}

tasks.register('startReactDev') {
    dependsOn installReactDeps
    doLast {
        def process = new ProcessBuilder()
                .directory(file(reactAppDir))
                .command("npm", "start")
                .redirectErrorStream(true)
                .start()

        // Create a buffer reader to capture the output
        def reader = new BufferedReader(new InputStreamReader(process.getInputStream()))

        // Start a thread to continuously read and print the output
        Thread.start {
            String line
            while ((line = reader.readLine()) != null) {
                println "React: $line"
            }
        }

        // Check if the process is still running
        if (!process.isAlive()) {
            throw new GradleException("React development server failed to start. Exit code: ${process.exitValue()}")
        }

        // Add shutdown hook to kill the React process when Gradle exits
        Runtime.getRuntime().addShutdownHook(new Thread() {
            @Override
            void run() {
                process.destroy()
            }
        })

        // Store the process in an ext property so it can be accessed by other tasks
        project.ext.reactProcess = process
    }
}

tasks.register('waitForReactDev') {
    dependsOn startReactDev
    doLast {
        println "Waiting for React dev server to start..."
        def maxRetries = 60  // Increased timeout to 60 seconds
        def retryCount = 0
        while (retryCount < maxRetries) {
            try {
                def connection = new URL("http://localhost:4000").openConnection() as HttpURLConnection
                connection.requestMethod = "GET"
                connection.connectTimeout = 1000
                connection.readTimeout = 1000

                if (connection.responseCode == 200) {
                    println "React dev server is up!"
                    return
                }
            } catch (Exception e) {
                if (project.hasProperty('reactProcess') && !project.reactProcess.isAlive()) {
                    throw new GradleException("React process died unexpectedly")
                }
                println "Waiting for React server... (${retryCount + 1}/${maxRetries})"
                Thread.sleep(1000)
                retryCount++
            }
        }
        throw new GradleException("React dev server did not start in time")
    }
}
*/

bootRun {
//    dependsOn startReactDev
//    dependsOn waitForReactDev
}

// For production build
//processResources {
//    dependsOn buildReactApp
//    from("$reactAppDir/build") {
//        into 'static'
//    }
//}
